<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonAbout"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:onClick="aboutView"
        android:text="@string/botonAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/botonSandwiches"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botonSandwiches"
        app:layout_constraintTop_toBottomOf="@+id/botonSandwiches"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/botonSandwiches"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:onClick="sandwichView"
        android:text="@string/botonSandwich"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logoEmpresa"
        app:layout_constraintStart_toStartOf="@+id/logoEmpresa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <ImageView
        android:id="@+id/logoEmpresa"
        android:layout_width="292dp"
        android:layout_height="347dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/nombreEmpresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>